# pipedrive_metabase_integration

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.orion  Dockerfile.runtime  README.md  create_or_update_core_blocks.py  create_secret_block.py  docker-compose.coolify.yml  docker-compose.yml  entrypoint.sh  grafana_dashboard.json  observability-config.yaml  pipedrive_metabase_integration.yaml  pipedrive_metabase_integration_content.json  pipedrive_metabase_integration_tree.txt  prefect.yaml  prometheus.yml  pyproject.toml  run_project.sh  update.sh
application/mappers/: deal_mapper.py
application/ports/: data_repository_port.py  pipedrive_client_port.py
application/schemas/: deal_schema.py
application/services/: etl_service.py
application/use_cases/: process_pipedrive_data.py
application/utils/: batch_optimizer.py  column_utils.py  data_processing_utils.py  data_transform.py  replace_nan_with_none_recursive.py
benchmark/: batch_size_optimizer.py
core_domain/entities/: __init__.py  deal.py  pipedrive_entity.py
core_domain/events/: data_updated.py
core_domain/value_objects/: custom_field.py  deal_status.py  identifier.py  identifiers.py  money.py  timestamp.py
flows/: deploy.py  pipedrive_deployments.py  pipedrive_metabase_etl.py  pipedrive_sync_aux.py
flows/utils/: flows_utils.py
infrastructure/: cache.py  db.py  db_pool.py  logging_config.py
infrastructure/api_clients/: pipedrive_api_client.py
infrastructure/config/: settings.py
infrastructure/db/: db_pool.py  schema_manager.py
infrastructure/k8s/: entrypoint.sh  prefect.yaml  prometheus.yml  pushgateway.yaml  (+1 more)
meta/: pipedrive_metabase_integration_content.json  pipedrive_metabase_integration_tree.txt
scripts/: register_k8s_block.py
(+12 files in other folders)
